top section structure complete

--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
             <li>header link three</li>
         </ul>
     </header>
+    <div id="section1">
+        <div class="text"> 
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+            <button>Sign up</button>   
+        </div>
+        <div class="image">
+            <img alt="top image">
+        </div> 
+    </div>
 </body>
 </html>
