--- a/index.html
+++ b/index.html
@@ -26,5 +26,26 @@
             <img alt="top image">
         </div> 
     </div>
+    <div id="section2">
+        <h2>Some random information.</h2>
+        <div>
+            <figure>
+                <img>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <img>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <img>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <img>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
+        </div>
+    </div>
 </body>
 </html>
