--- a/index.html
+++ b/index.html
@@ -46,10 +46,18 @@
                 <figcaption>this is some subtext under an illustration or image</figcaption>
             </figure>
         </div>
-        <div id="section3">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
+    </div>
+    <div id="section3">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+    <div id="section4">
+        <div class="action">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
         </div>
+        
+        <button>Sign up</button>
     </div>
 </body>
 </html>
