--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img alt="Header Logo">
+        <img alt="Header Logo" src="https://cdn.pixabay.com/photo/2022/02/17/14/28/avatar-the-last-airbender-7018911_640.jpg">
         <ul>
             <li>header link one</li>
             <li>header link two</li>
@@ -23,26 +23,26 @@
             <button>Sign up</button>   
         </div>
         <div class="image">
-            <img alt="top image">
+            <img alt="top image" src="https://cdn.pixabay.com/photo/2014/09/24/03/55/monk-458491_640.jpg">
         </div> 
     </div>
     <div id="section2">
         <h2>Some random information.</h2>
         <div>
             <figure>
-                <img>
+                <img src="https://cdn.pixabay.com/photo/2018/09/23/18/30/drop-3698073_640.jpg">
                 <figcaption>this is some subtext under an illustration or image</figcaption>
             </figure>
             <figure>
-                <img>
+                <img src="https://cdn.pixabay.com/photo/2018/04/27/21/39/earth-3355931_640.jpg">
                 <figcaption>this is some subtext under an illustration or image</figcaption>
             </figure>
             <figure>
-                <img>
+                <img src="https://cdn.pixabay.com/photo/2017/02/27/08/50/cyclone-2102397_640.jpg">
                 <figcaption>this is some subtext under an illustration or image</figcaption>
             </figure>
             <figure>
-                <img>
+                <img src="https://cdn.pixabay.com/photo/2013/06/09/17/04/fire-123784_640.jpg">
                 <figcaption>this is some subtext under an illustration or image</figcaption>
             </figure>
         </div>
