--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <header>
-        <img alt="Header Logo" src="https://cdn.pixabay.com/photo/2022/02/17/14/28/avatar-the-last-airbender-7018911_640.jpg">
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+        <h1>Header Logo</h1>
+        <div class="right">
+            <ul>
+                <a href="#"><li>header link one</li></a>
+                <a href="#"><li>header link two</li></a>
+                <a href="#"><li>header link three</li></a>
+            </ul>
+        </div>
+        
     </header>
     <div id="section1">
         <div class="text"> 
@@ -28,7 +31,7 @@
     </div>
     <div id="section2">
         <h2>Some random information.</h2>
-        <div>
+        <div class="images">
             <figure>
                 <img src="https://cdn.pixabay.com/photo/2018/09/23/18/30/drop-3698073_640.jpg">
                 <figcaption>this is some subtext under an illustration or image</figcaption>
@@ -48,8 +51,10 @@
         </div>
     </div>
     <div id="section3">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <div>
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="thor">-Thor, God of Thunder</p>
+        </div>
     </div>
     <div id="section4">
         <div class="action">
